# lumen-lens-backend

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: diff.rs  generate.rs  inspect.rs  mock.rs  mod.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: engine.rs  languages.rs  lib.rs  output.rs
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/mock-gen/: Cargo.toml
crates/mock-gen/src/: lib.rs
crates/wasm-parser/: Cargo.toml
crates/wasm-parser/src/: ir.rs  lib.rs  reader.rs
templates/dart/: client.dart.tera
templates/go/: client.go.tera  types.go.tera
templates/python/: client.py.tera
templates/typescript/: package.json.tera
templates/typescript/src/: index.ts.tera  mock.ts.tera  types.ts.tera
