[workspace]
members = [
    "crates/wasm-parser",
    "crates/codegen",
    "crates/diff",
    "crates/mock-gen",
    "cli",
]
resolver = "2"

[workspace.dependencies]
anyhow       = "1.0"
clap         = { version = "4.5", features = ["derive"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tera         = "1.20"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmparser   = "0.216"
stellar-xdr  = { version = "27.0.0", features = ["std", "base64"] }
