[package]
name = "diff"
version = "0.1.0"
edition = "2021"
description = "Compares two ContractSpec versions and produces a breaking-change report."

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
wasm-parser = { path = "../wasm-parser" }
